test/should-fail/jfxc1310Application.visage
/*
 * @subtest jfxc1310Applet
 */

public class jfxc1310Application {
    public var content: Component;
} 
